# ion-lang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ION_SPEC.md  README.md  SECURITY.md  ion.toml
docs/: ABI.md  BETA.md
examples/: access_log.c  access_log.ion  access_log.toml  channel_worker.c  channel_worker.ion  hello_world.c  hello_world_safe.c  hello_world_safe.ion  hello_world_safe.toml  http_server.c  http_server.ion  http_server.toml  minimal.c  minimal.ion  showcase.c  showcase.ion  showcase.toml  spawn_channel.c  spawn_channel.ion  spawn_channel.toml
ion-vscode/: language-configuration.json  package.json  tsconfig.json
runtime/: ion_runtime.c  ion_runtime.h
src/: integer_limits.rs  lib.rs  main.rs  types_util.rs
src/ast/: mod.rs
stdlib/: fmt.ion  fs.ion  io.ion  result.ion
tests/: README.md  large_codegen_smoke.sh  math.ion  struct_lib.ion  test_array_assignment.ion  test_array_basic.ion  test_array_bounds_panic.ion  test_array_bounds_safe.ion  test_array_indexing.ion  test_array_init.ion  test_array_literal.ion  test_array_to_slice_coercion.ion  test_array_to_slice_let.ion  test_assign_while_borrowed_error.ion  test_basic.ion  test_bin_literals.ion  test_bitwise_ops.ion  test_bool_comparison.ion  test_bool_literal.ion  test_bool_operations.ion  test_box_basic.ion  test_box_ops.ion  test_break_continue.ion  test_break_continue_error.ion  test_call_basic.ion  test_call_struct_field_move.ion  test_channel_basic.ion  test_channel_contention.ion  test_channel_ref_error.ion  test_channel_send_call_expr.ion  test_channel_send_field_call_expr.ion  (+185 more)
(+65 files in other folders)
