[package]
name = "ion-compiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ion-compiler"
path = "src/main.rs"

[[bin]]
name = "ion-lsp"
path = "src/bin/ion-lsp.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp = "0.20.0"

