[package]
name = "ion-compiler"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "ion-compiler"
path = "src/main.rs"

[[bin]]
name = "ion-lsp"
path = "src/bin/ion-lsp.rs"

[[bin]]
name = "ion-build"
path = "src/bin/ion-build.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "1.1.2"
tower-lsp = "0.20.0"

[dev-dependencies]
tempfile = "3.27.0"
url = "2.5.8"

